2013-08-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/asmfiles/op14e.asm,
    gpasm/testsuite/gpasm.project/listfiles/op14e.lst,
    gpasm/testsuite/gpasm.project/hexfiles/op14e.hex,
    gpasm/testsuite/gpasm.project/objasm/op14e.asm,
    gpasm/testsuite/gpasm.project/objlstfiles/op14e.lst,
    gpasm/testsuite/gpasm.project/objfiles/op14e.o:
    added gpasm regression tests for bug
    #268 PIC14e: HIGH directive not setting bit-7

2013-08-01  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c, libgputils/gpcofflink.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h: fixed bug
    #268 PIC14e: HIGH directive not setting bit-7
  * gputils/gpvo.c: display symbolic value of relocation type

2013-07-24  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpcofflink.c, libgputils/gpprocessor.c:
    applied modified patch [PATCH] Bad warning for BRA on 16F code,
    thanks to Richard Hodges

2013-06-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f753.inc, p16hv753.inc, header/p16f1704.inc,
    header/p16f1708.inc, header/p16lf1704.inc, header/p16lf1708.inc,
    lkr/16f753_g.lkr, lkr/16hv753_g.lkr:
    Fresh based on the mplabx-1.85.

2013-05-17  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: generate error if CONFIG directive is used with
    non 16 bit devices

2013-05-14  Borut Razem  <borutr@users.sourceforge.net>
  * doc/html-help/Makefile.am, doc/html-help/Makefile.in:
    define -gp option as gputils source directory instead of
    repository root

2013-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c, libgputils/gpcfg-table.c:
    Repair and supplement.

2013-05-11  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx: various updates

2013-05-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am, header/Makefile.in, header/p16f1704.inc,