@@ -40,6 +40,7 @@ struct srcfns {
 };
 
 extern struct gplink_state {
+  gp_boolean mplink_compatible;    /* MPLINK compatibility mode */
   char startdate[80];              /* When gplink ran */
   enum formats hex_format;         /* format of the output */
   char *paths[MAX_PATHS];          /* the list of include paths */
